Fixed spelling error, fixed flickering on mobile again, which breaks clicking on the hero button. :/

--- a/simple/styles.less
+++ b/simple/styles.less
@@ -36,7 +36,7 @@ section {
         text-shadow: 0px 0px 8px rgba(0,0,0,0.6);
         z-index: 0; //TODO - negative z-index breaks :hover state of anything inside
         @media(max-width: 768px)  {
-            z-index: 0;
+            z-index: -1;
         }
 
 
